// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            accessibilityIgnoresInvertColors={true}
          >
            <Image
              fadeDuration={0}
              source={
                Object {
                  "testUri": "../../../packages/responsive-image/assets/t.png",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <View
        pointerEvents="none"
      >
        <View>
          <Text>
            Caption
          </Text>
        </View>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with no caption 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            accessibilityIgnoresInvertColors={true}
          >
            <Image
              fadeDuration={0}
              source={
                Object {
                  "testUri": "../../../packages/responsive-image/assets/t.png",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <View
        pointerEvents="none"
      />
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. modal image with custom highressize 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            accessibilityIgnoresInvertColors={true}
          >
            <Image
              fadeDuration={0}
              source={
                Object {
                  "testUri": "../../../packages/responsive-image/assets/t.png",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <View
        pointerEvents="none"
      >
        <View>
          <Text>
            Caption
          </Text>
        </View>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`9. hides elements when tapping on the image 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={true}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View />
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            accessibilityIgnoresInvertColors={true}
          >
            <Image
              fadeDuration={0}
              source={
                Object {
                  "testUri": "../../../packages/responsive-image/assets/t.png",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`10. re-shows elements when tapping on the image a second time 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={true}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            accessibilityIgnoresInvertColors={true}
          >
            <Image
              fadeDuration={0}
              source={
                Object {
                  "testUri": "../../../packages/responsive-image/assets/t.png",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <View
        pointerEvents="none"
      >
        <View>
          <Text>
            Caption
          </Text>
        </View>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
